<resources>
    <string name="app_name">Pantau Bersama Test</string>
    <string name="action_settings">Settings</string>
    <string name="pilih_provinsi">pilih_provinsi</string>
    <string name="provinsi">Provinsi</string>
    <string name="jabatan">Jabatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string-array name="nama_provinsi" >

        <item> Aceh </item>
        <item> Sumatera Utara</item>
        <item> Sumatera Barat</item>
        <item> Sumatera Selatan</item>
        <item> DKI Jakarta</item>
        <item> Jawa Barat</item>
        <item> Jawa Timur</item>
        <item> Jawa Tengah</item>
        <item> DI Yogyakarta</item>
        <item> Kalimantan Utara</item>
        <item> Kalimantan Selatan</item>
        <item> Kalimantan Barat</item>

    </string-array>

    <string-array name="jabatan" >
        <item> Gubernur </item>
        <item> Bupati </item>
        <item> Kecamatan </item>
        <item> Kelurahan </item>
        <item> Padukuhan </item>
    </string-array>

    <string-array name="kabupaten" >
        <item> Kota</item>
        <item> Sleman</item>
        <item> Bantul</item>
        <item> KulonProgo</item>
        <item> Gunungkidul</item>

    </string-array>

    <string-array name="kecamatan" >
        <item> Depok</item>
        <item> Condongcatur</item>
        <item> Bantulan</item>
        <item> godean</item>
        <item> kotabaru</item>

    </string-array>

    <string-array name="kelurahan" >
        <item> soropadan</item>
        <item> banyumili</item>
        <item> banyuasin</item>
        <item> banyu</item>


    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
