<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.hanifsugiyanto.card.TambahPeranPengamatActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/pilih_jabatan"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/jabatan"
                android:textSize="10sp" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@drawable/border_black">
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/pilih_provinsi"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/provinsi"
                android:textSize="10sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@drawable/border_black">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/pilih_kabupaten"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/kabupaten"
                android:textSize="10sp"
                />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@drawable/border_black">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/pilih_kecamatan"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/kecamatan"
                android:textSize="10sp"
                />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@drawable/border_black">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/pilih_kelurahan"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/kelurahan"
                android:textSize="10sp"/>
            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@drawable/border_black">
        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/rv"
        >

    </android.support.v7.widget.RecyclerView>


</LinearLayout>